service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: python-k8s-poc
spec:
  selector:
    app: poc
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
