ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app-ingress
  namespace: python-k8s-poc
  annotations:
    spec.ingressClassName: nginx 
spec:
  rules:
  - host: my-app-route
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-app-service
            port:
              number: 80
